--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<h1>добавили заголовок</h1>
+	<h1>привет, пользователь! </h1>
 </body>
 </html>
